# Huh

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
docs/: Huh Program Language Syntax Standard.docx
src/: lexer.h  main.c  main.h  type.h
src/cli/: cli.c  cli.h
src/tool/: logger.c  logger.h  result.c  result.h
